packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/structure/wrong-version.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing structure validation, verify if EDXML data with wrong version is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="1.0.0"/>
